--- a/src/html/includes/head.pug
+++ b/src/html/includes/head.pug
@@ -3,11 +3,11 @@ head
   meta(name="viewport" content="width=device-width, initial-scale=1.0")  
   meta(http-equiv="X-UA-Compatible" content="ie=edge")
   title Random Quote Machine
-  meta(property="og:url"           content="http://localhost:3000")
+  meta(property="og:url"           content="https://geralfonso.github.io/ranquote/index.html")
   meta(property="og:type"          content="website")
   meta(property="og:title"         content="Random Quote Machine")
   meta(property="og:description"   content="Random Quote Machine")
-  meta(property="og:image"         content="http://3.bp.blogspot.com/-4Xl5uE_Vj9I/Ujwl-AxiNeI/AAAAAAAAHNU/iMAEnPbgKuA/w1200-h630-p-k-no-nu/minimal-desktop-wallpaper-think-different.png")
+  meta(property="og:image"         content="./img/think-different.png")
 
   link(href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet")
   link(href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet")
