--- a/src/html/includes/head.pug
+++ b/src/html/includes/head.pug
@@ -7,7 +7,7 @@ head
   meta(property="og:type"          content="website")
   meta(property="og:title"         content="Random Quote Machine")
   meta(property="og:description"   content="Random Quote Machine")
-  meta(property="og:image"         content="./img/think-different.png")
+  meta(property="og:image"         content="https://geralfonso.github.io/ranquote/img/think-different.png")
 
   link(href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet")
   link(href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet")
