fixing the facebook button amd adding twitter card

--- a/src/html/includes/head.pug
+++ b/src/html/includes/head.pug
@@ -3,11 +3,24 @@ head
   meta(name="viewport" content="width=device-width, initial-scale=1.0")  
   meta(http-equiv="X-UA-Compatible" content="ie=edge")
   title Random Quote Machine
-  meta(property="og:url"           content="https://geralfonso.github.io/ranquote/index.html")
+  // Facebook Open Graph
+  meta(name="description" 				 content="A simple Random Quote Machine App.")
+  meta(name="author" 					     content="GerAlfonso")
+  meta(property="og:locale" 			 content="en_EN")
+  meta(property="og:url"           content="https://geralfonso.github.io/ranquote/")
   meta(property="og:type"          content="website")
   meta(property="og:title"         content="Random Quote Machine")
-  meta(property="og:description"   content="Random Quote Machine")
+  meta(property="og:description"   content="A simple Random Quote Machine App.")
   meta(property="og:image"         content="https://geralfonso.github.io/ranquote/img/think-different.png")
+  // Twitter Card
+  meta(name="twitter:title" 			 content="Random Quote Machine")
+  meta(name="twitter:description"  content="A simple Random Quote Machine App.")
+  meta(name="twitter:image" 			 content="https://geralfonso.github.io/ranquote/img/think-different.png")
+  meta(name="twitter:site" 				 content="@GerAlfonso")
+  meta(name="twitter:creator" 		 content="@GerAlfonso")
+  meta(name="twitter:via" 				 content="GerAlfonso")
+  meta(name="twitter:card" 				 content="photo")
+  meta(name="twitter:url" 				 content="https://geralfonso.github.io/ranquote/")
 
   link(href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet")
   link(href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet")
