--- a/src/html/includes/quote.pug
+++ b/src/html/includes/quote.pug
@@ -9,9 +9,8 @@
       p.quote_autor Silver Fang
       button.btn.quote_btn.text-red(type="submit") Next
       .quote_share
-        div.btn.fb-share-button(data-href="https://geralfonso.github.io/ranquote/" data-layout="button" data-size="large" data-mobile-iframe="true")
-          a(target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgeralfonso.github.io%2Franquote%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore") Compartir
-          i.fab.fa-facebook-square
+        a.btn(target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgeralfonso.github.io%2Franquote%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore")
+          i.fab.fa-facebook-f
 
         a.btn(href="http://twitter.com/share?text=This+is+google+a+search+engine&url=https%3A%2F%2Fwww.google.com")
-          i.fab.fa-twitter-square
+          i.fab.fa-twitter
