--- a/quote-bak.pug
+++ b/quote-bak.pug
@@ -1,13 +1,13 @@
 .container.height_vp--max.center_el--abs    
   .title--vertical
-    h2.title_heading  
+    h2.title_heading silver fang  
   .row.quote
     .col.s12.m7.l7.xl7.quote_img
-      img(src="", alt="")
+      img(src="https://media.giphy.com/media/lXqIT00H4LayQ/source.gif", alt="Silver Fang")
     .col.s12.m5.l5.xl5.quote_cite
       i.fas.fa-quote-left
-      cite      
-      p.quote_autor
+      cite Calma tu mente, eres muy joven para pensar en el fracaso. Cuando tu espalda este contra la pared, debes tomar acción. Pensar de mas no cambia nada. La mejor es salir del paso.      
+      p.quote_autor Silver Fang
       button.btn.quote_btn.text-red(type="submit") Next
       .quote_share.social
         span.social_tittle.text-red Share
