--- a/src/sass/components/_vertical-title.sass
+++ b/src/sass/components/_vertical-title.sass
@@ -17,6 +17,7 @@
   font-size: 5em
   line-height: 1
   color: rgba(255, 0, 0, 0.5)
+  text-transform: capitalize
 
   +extra-small
     font-size: 3.5em
