--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,6 +7,7 @@
 // Tools
 @import tools/font
 @import tools/breakpoints
+@import tools/shadows
 
 // Generic
 @import generic/normalize
@@ -23,6 +24,7 @@
 @import components/quote
 @import components/vertical-title
 @import components/buttons
+@import components/social
 
 // Utilities
 @import trumps/utilities
