--- a/src/sass/settings/_colors.sass
+++ b/src/sass/settings/_colors.sass
@@ -24,3 +24,10 @@ $gray-900: #212121 !default
 
 $primary: #24afff !default
 $primary-darker: #248bff !default
+
+$buttonColor: $white
+$hoverColorWhite: $white
+$hoverColorGray1: $gray-100
+$hoverColorGray2: $gray-200
+$facebook: #3B5998
+$twitter: #61c5ec
