--- a/src/sass/trumps/_utilities.sass
+++ b/src/sass/trumps/_utilities.sass
@@ -26,3 +26,16 @@
 
 .text-red
   color: $red
+
+.text-green
+  color: $green
+
+// Social Colors Classes
+
+.facebook--hover
+  &:hover
+    background-color: $facebook
+
+.twitter--hover
+  &:hover
+    background-color: $twitter
