--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -7,9 +7,9 @@
   justify-content: center
   align-items: center
   min-width: 122px
-  height: 35px
+  height: unquote($heightBtn + "px")
   padding: 0 2em
-  background-color: $white
+  background-color: $buttonColor
   border: 0
   border-radius: $base-border-radius + 10px
   font-weight: $weight-500
@@ -19,10 +19,11 @@
   outline: none
   cursor: pointer
   transition: all 0.3s ease
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
+
+  +shadow-1
 
   &:hover
-    background-color: $gray-100
+    background-color: $hoverColorGray1
 
   &:active
-    background-color: $gray-200
+    background-color: $hoverColorGray2
