db updated, modifying styles and delete temp.sass

--- a/src/html/includes/quote.pug
+++ b/src/html/includes/quote.pug
@@ -8,10 +8,10 @@
       i.fas.fa-quote-left
       cite      
       p.quote_autor
-      button.btn.quote_btn.text-red(type="submit") Next
+      button.btn.quote_btn(type="submit") Next
       .quote_share.social
-        span.social_tittle.text-red Share
-        .social_buttons.text-red
+        span.social_tittle Share
+        .social_buttons
           a.social_btn.facebook--hover(target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgeralfonso.github.io%2Franquote%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore")
             i.fab.fa-facebook-f
           a.social_btn.twitter--hover(href="http://twitter.com/share?text=This+is+google+a+search+engine&url=https%3A%2F%2Fwww.google.com")
