using facebook sdk

--- a/src/html/includes/quote.pug
+++ b/src/html/includes/quote.pug
@@ -4,7 +4,7 @@
   .row.quote
     .col.s12.m7.l7.xl7.quote_img
       img(src="", alt="")
-    .col.s12.m5.l5.xl5.quote_cite
+    .col.s12.m5.l5.xl5.quote_cite    
       i.fas.fa-quote-left
       cite      
       p.quote_autor
@@ -12,7 +12,7 @@
       .quote_share.social
         span.social_tittle Share
         .social_buttons
-          a.social_btn.facebook--hover(target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgeralfonso.github.io%2Franquote%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore")
+          a.social_btn.facebook--hover.fb-xfbml-parse-ignore(target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgeralfonso.github.io%2Franquote%2F&amp;src=sdkpreparse")
             i.fab.fa-facebook-f
-          a.social_btn.twitter--hover(href="http://twitter.com/share?text=This+is+google+a+search+engine&url=https%3A%2F%2Fwww.google.com")
+          a.social_btn.twitter--hover(target="_blank")
             i.fab.fa-twitter
