--- a/src/html/includes/head.pug
+++ b/src/html/includes/head.pug
@@ -24,4 +24,5 @@ head
 
   link(href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet")
   link(href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet")
-  link(type="text/css" rel="stylesheet" href="./css/main.css" media="screen,projection") 
+  link(type="text/css" rel="stylesheet" href="./css/main.css" media="screen,projection")
+  script
