--- a/src/html/includes/facebooksdk.pug
+++ b/src/html/includes/facebooksdk.pug
@@ -26,7 +26,7 @@ script.
         object: {
           'og:title': 'Random Quote Machine' + overrideTitle,
           'og:description': overrideDescription,
-          //'og:image': overrideImage
+          'og:image:url': overrideImage
         },
       })
     }, function (response) {
