--- a/src/html/includes/facebooksdk.pug
+++ b/src/html/includes/facebooksdk.pug
@@ -24,6 +24,7 @@ script.
       action_type: 'og.shares',
       action_properties: JSON.stringify({
         object: {
+          'og:url': 'https://geralfonso.github.io/ranquote',
           'og:title': 'Random Quote Machine' + overrideTitle,
           'og:description': overrideDescription,
           'og:image:url': overrideImage
