--- a/src/html/includes/facebooksdk.pug
+++ b/src/html/includes/facebooksdk.pug
@@ -21,7 +21,7 @@ script.
    function shareOverrideOGMeta(title, description,gif) {
      var ogTitle = String(title);
      var ogDes = String(description);
-     var ogImgUrl = String(gif);
+     var ogImgUrl = 'https://media.giphy.com/media/Xp98kEiD0SF9PEVPRl/giphy.gif';
      
      console.log(title);
      console.log(description);
