--- a/src/html/includes/quote.pug
+++ b/src/html/includes/quote.pug
@@ -12,7 +12,7 @@
       .quote_share.social
         span.social_tittle Share
         .social_buttons
-          a.social_btn.facebook--hover.fb-xfbml-parse-ignore(target="_blank" href="")
+          a.social_btn.facebook--hover.fb-xfbml-parse-ignore(target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgeralfonso.github.io%2Franquote%2F&amp;src=sdkpreparse")
             i.fab.fa-facebook-f
           a.social_btn.twitter--hover(target="_blank")
             i.fab.fa-twitter
